<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.CheckFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/textView"
            style="@style/naslov"
            android:layout_width="331dp"
            android:layout_height="238dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:text="@string/ProvjeraPrepreka"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            style="@style/radioBtn"
            android:layout_width="231dp"
            android:layout_height="156dp"
            android:layout_marginBottom="228dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ne"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/da"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </RadioGroup>

        <Button
            android:id="@+id/button2"
            style="@style/dugme"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/btnClr"
            android:text="@string/dalje"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
            app:layout_constraintVertical_bias="0.561" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>