<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/textView3"
            style="@style/naslov"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="62dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:text="@string/podaciOverview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="375dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:id="@+id/imePrez"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label1Ime"
                    android:layout_width="129dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/labelIme"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/imeIprez"
                    android:layout_width="163dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Godine"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label2God"
                    android:layout_width="129dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/podaciGod"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/godineTxt"
                    android:layout_width="163dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/prioritet"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label3Prioritet"
                    android:layout_width="129dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/prioritetnaGrupa"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/prioritetTxt"
                    android:layout_width="163dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Vax"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label4Vax"
                    android:layout_width="129dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/odabranaVakcina"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/vaxTxt"
                    android:layout_width="164dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            style="@style/dugme"
            android:layout_width="@dimen/buttonWidth"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/potvrdiBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>