<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/textView4"
            style="@style/naslov"
            android:layout_width="333dp"
            android:layout_height="140dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="15dp"
            android:text="@string/SuccessTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="374dp"
            android:layout_height="380dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <LinearLayout
                android:id="@+id/lokacija"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label1lok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/lok"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/lokacijaTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Zetra - Sarajevo"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Vrijeme"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelVrijeme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/vrijeme"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/vrijemeTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="16:14 h"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vrijemeDat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Sutra"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/prijavljeni"
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label3Prijavljeni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/trenutnoPrijavljeni"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/prijavljeniTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>